feat(backend): harden concurrent business workflows